--- a/DOMAIN3 - Security Architecture and Engineering/3.1 Research, implement, and manage engineering processes using secure design principles.md
+++ b/DOMAIN3 - Security Architecture and Engineering/3.1 Research, implement, and manage engineering processes using secure design principles.md
@@ -443,30 +443,20 @@ Privacy by Design is a foundational concept in cybersecurity and data protection
 
 Key Aspects of Privacy by Design:
 
-**Proactive, Not Reactive:** Privacy by Design encourages organizations to anticipate and prevent privacy issues before they arise, rather than responding to them after a breach occurs. This means that privacy considerations should be at the forefront of decision-making from the very beginning.
-
-**Data Minimization:** One of the core tenets of Privacy by Design is that organizations should only collect, store, and process the minimum amount of personal data necessary to achieve their objectives. This reduces the risk of data exposure and simplifies the overall security landscape.
-
-**Default Privacy Settings:** Systems and applications should be configured with the highest level of privacy protection by default, ensuring that users’ personal data is safeguarded without requiring them to manually adjust privacy settings. This aligns with the principle of “secure by default.”
-
-**End-to-End Security:** Privacy by Design also means incorporating robust security measures to protect personal data throughout its entire lifecycle, from collection and storage to transmission and disposal. Strong encryption, access controls, and regular security audits are essential to safeguard privacy.
-
-**Transparency:** Organizations must be transparent about their data collection and processing practices, clearly informing users of how their personal information will be used, stored, and shared. This transparency helps build trust and ensures compliance with privacy regulations.
-
-**User Control:** Giving users control over their own personal data is another critical element. Users should be able to access, correct, or delete their data, and they should have the ability to opt-out of data collection when possible.
+1. **Proactive, Not Reactive:** Privacy by Design encourages organizations to anticipate and prevent privacy issues before they arise, rather than responding to them after a breach occurs. This means that privacy considerations should be at the forefront of decision-making from the very beginning.
+2. **Data Minimization:** One of the core tenets of Privacy by Design is that organizations should only collect, store, and process the minimum amount of personal data necessary to achieve their objectives. This reduces the risk of data exposure and simplifies the overall security landscape.
+3. **Default Privacy Settings:** Systems and applications should be configured with the highest level of privacy protection by default, ensuring that users’ personal data is safeguarded without requiring them to manually adjust privacy settings. This aligns with the principle of “secure by default.”
+4. **End-to-End Security:** Privacy by Design also means incorporating robust security measures to protect personal data throughout its entire lifecycle, from collection and storage to transmission and disposal. Strong encryption, access controls, and regular security audits are essential to safeguard privacy.
+5. **Transparency:** Organizations must be transparent about their data collection and processing practices, clearly informing users of how their personal information will be used, stored, and shared. This transparency helps build trust and ensures compliance with privacy regulations.
+6. **User Control:** Giving users control over their own personal data is another critical element. Users should be able to access, correct, or delete their data, and they should have the ability to opt-out of data collection when possible.
 
 Let’s consider the example of a healthcare app that collects and processes sensitive health information. A company developing this app would integrate privacy measures from the very beginning:
 
 - Proactive Planning: During the design phase, the development team identifies potential privacy risks associated with collecting health data and integrates privacy protections such as data anonymization and encryption.
-
 - Data Minimization: The app is designed to only request necessary data from users, such as basic health information, rather than collecting additional personal details that aren’t crucial for the app’s function.
-
 - Default Privacy Settings: By default, the app ensures that data is stored securely, access is limited, and sharing settings are configured to protect the user’s privacy unless explicitly opted-in.
-
 - End-to-End Security: The app uses encryption to protect data both at rest and in transit, ensuring that sensitive health information is never exposed to unauthorized parties.
-
 - User Control: Users have access to their data at all times and can delete it or update their information whenever they wish.
-
 - Transparency: The company provides a clear privacy policy that outlines how data will be collected, used, and protected, giving users the confidence that their sensitive health information is being handled responsibly.
 
 ### Open Questions ###
@@ -498,19 +488,15 @@ Let’s consider the example of a healthcare app that collects and processes sen
 
 The principle of shared responsibility in cybersecurity refers to the idea that security is a joint effort between multiple parties, where the responsibilities for securing a system, data, and infrastructure are divided between the service provider and the customer. It’s a concept especially relevant in the context of cloud computing, managed services, and other outsourced IT environments. By understanding who is responsible for what, organizations can ensure that critical security measures are implemented effectively and that no security gaps are overlooked.
 
-:necktie: Security is a team effort—your cloud, their infrastructure, our responsibility
+> ⚠ Security is a team effort—your cloud, their infrastructure, our responsibility
 
 Key Aspects of Shared Responsibility:
 
-- Service Provider's Role: The service provider (e.g., a cloud service provider like Amazon Web Services, Microsoft Azure, or Google Cloud) is typically responsible for securing the infrastructure that underpins the service. This includes ensuring the physical security of data centers, the security of the hypervisor, and the network that supports the service. The service provider is also responsible for maintaining a secure and compliant environment at the hardware and software levels to prevent vulnerabilities.
-
-- Customer's Role: The customer (e.g., an organization using cloud services) is responsible for securing everything that is built on top of the provided infrastructure. This typically includes the configuration of virtual machines, storage, applications, and user access controls. In the case of cloud computing, customers manage data, identity management, network configurations, and even certain parts of application security.
-
-- Clear Division of Security Layers: The shared responsibility model clearly defines the layers of security that are managed by each party. For example, in a cloud environment the cloud provider is responsible for securing the infrastructure, such as the hardware, networking, and hypervisor and the customer is responsible for securing what is built on top of that infrastructure, such as their data, applications, and user authentication.
-
-- Accountability and Control: Shared responsibility ensures that both parties are aware of their roles and are held accountable for meeting their respective security obligations. It also allows both the service provider and the customer to focus on areas where they have control and expertise, thereby improving overall security.
-
-- Security Models and Agreements: Providers and customers often formalize the shared responsibility model through security documentation, contracts, and service-level agreements (SLAs). This helps avoid misunderstandings and ensures that both parties know exactly what security measures are in place.
+- `Service Provider's Role`: The service provider (e.g., a cloud service provider like Amazon Web Services, Microsoft Azure, or Google Cloud) is typically responsible for securing the infrastructure that underpins the service. This includes ensuring the physical security of data centers, the security of the hypervisor, and the network that supports the service. The service provider is also responsible for maintaining a secure and compliant environment at the hardware and software levels to prevent vulnerabilities.
+- `Customer's Role`: The customer (e.g., an organization using cloud services) is responsible for securing everything that is built on top of the provided infrastructure. This typically includes the configuration of virtual machines, storage, applications, and user access controls. In the case of cloud computing, customers manage data, identity management, network configurations, and even certain parts of application security.
+- `Clear Division of Security Layers`: The shared responsibility model clearly defines the layers of security that are managed by each party. For example, in a cloud environment the cloud provider is responsible for securing the infrastructure, such as the hardware, networking, and hypervisor and the customer is responsible for securing what is built on top of that infrastructure, such as their data, applications, and user authentication.
+- `Accountability and Control`: Shared responsibility ensures that both parties are aware of their roles and are held accountable for meeting their respective security obligations. It also allows both the service provider and the customer to focus on areas where they have control and expertise, thereby improving overall security.
+- `Security Models and Agreements`: Providers and customers often formalize the shared responsibility model through security documentation, contracts, and service-level agreements (SLAs). This helps avoid misunderstandings and ensures that both parties know exactly what security measures are in place.
 
 ### Open Questions ###
 
@@ -544,15 +530,10 @@ Secure Access Service Edge (SASE) is a cybersecurity framework that integrates n
 Key Principles of SASE are:
 
 - Cloud-Native Architecture – SASE is delivered as a cloud service, enabling scalability, flexibility, and ease of management.
-
 - Zero Trust Network Access (ZTNA) – Ensures users and devices are authenticated before granting access to resources, reducing the risk of unauthorized access.
-
 - Security Convergence – Combines multiple security functions such as Secure Web Gateway (SWG), Cloud Access Security Broker (CASB), Firewall as a Service (FWaaS), and Data Loss Prevention (DLP) into a single solution.
-
 - Global Reach with Local Performance – Uses distributed cloud-based points of presence (PoPs) to optimize connectivity and performance for remote users.
-
 - Identity-Driven Security – Access control is based on user identity, device, and security posture, rather than just network location.
-
 ### Open Questions ###
 
 1. What is Secure Access Service Edge (SASE)?
